--- a/index.html
+++ b/index.html
@@ -3,10 +3,37 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<!-- Css -->
+	<link rel="stylesheet" type="text/css" href="assets/styles.css">
+	<!-- Fav Icon -->
+	<link rel="icon" type="image/x-icon" href="img/fav.png">
+	<!-- Box icon -->
+	<link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css' rel='stylesheet'>
 	<title>GameStore</title>
 </head>
 <body>
-<p> Hello World </p>
+	<header>
+		<!-- NavBar -->
+		<div class="nav container">
+			<!-- Logo -->
+			<a href="index.html" class="logo">Game<span>Store</span></a>
+			<!-- Nav Icon -->
+			<div class="nav-icons">
+				<i class='bx bx-bell bx-tada' id="bell-icon"> <span></span> </i>
+				<i class='bx bxs-download'></i>
+				<!-- Menu Icon -->
+				<div class="menu-icon">
+					<div class="line1"></div>
+					<div class="line2"></div>
+					<div class="line3"></div>
+				</div>
+			</div>	
+		</div>
+	</header>
 
+	
+	<!-- Js -->
+	<script type="text/javascript" src="js/script.js"></script>
+	<script>document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')</script>
 </body>
 </html>
