Configuration Home section

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 	<title>GameStore</title>
 </head>
 <body>
+	<!-- En Tete -->
 	<header>
 		<!-- NavBar -->
 		<div class="nav container">
@@ -27,11 +28,46 @@
 					<div class="line2"></div>
 					<div class="line3"></div>
 				</div>
-			</div>	
+			</div>
+			<!-- Menu -->
+			<div class="menu">
+				<img src="img/menu.png" alt="">
+				<div class="navbar">
+					<li><a href="index.html">Accueil</a></li>
+					<li><a href="#tendance">Tendances</a></li>
+					<li><a href="#nouveaux-jeux">Nouveaux Jeux</a></li>
+					<li><a href="#action">Actions</a></li>
+					<li><a href="#contact">Contact</a></li>
+				</div>
+			</div>
+			<!-- Notification -->
+			<div class="notification">
+				<div class="notification-box">
+					<i class='bx bxs-check-circle'></i>
+					<p>Félicitation votre jeu a été téléchargé avec succès</p>
+				</div>
+				<div class="notification-box box-color">
+					<i class='bx bxs-x-circle'></i>
+					<p>Impossible d'appliquer les changements</p>
+				</div>
+			</div>
 		</div>
 	</header>
 
-	
+	<!-- Accueil start -->
+	<section class="home container" id="home">
+		<img src="img/home.png" alt="">
+		<div class="home-text">
+			<h1>CITY OF THE <br> FUTURE </h1>
+			<a href="#" class="btn">Disponible maintenant</a>
+		</div>
+	</section>
+	<!-- Accueil end -->
+
+	<!-- Tendances start -->
+	<section></section>
+	<!-- Tendances end -->
+
 	<!-- Js -->
 	<script type="text/javascript" src="js/script.js"></script>
 	<script>document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')</script>
