Configuration trending section

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<!-- Css -->
 	<link rel="stylesheet" type="text/css" href="assets/styles.css">
+	<!-- Swiper Css file -->
+	<link rel="stylesheet" type="text/css" href="assets/swiper-bundle.min.css">
 	<!-- Fav Icon -->
 	<link rel="icon" type="image/x-icon" href="img/fav.png">
 	<!-- Box icon -->
@@ -65,9 +67,160 @@
 	<!-- Accueil end -->
 
 	<!-- Tendances start -->
-	<section></section>
+	<section class="trending container" id="trending">
+		<div class="heading">
+			<i class="bx bxs-flame"></i>
+			<h2>Tendances</h2>
+		</div>
+		<!-- Contenue -->
+		<div class="trending-content swiper">
+			<div class="swiper-wrapper">
+				<!-- 1 Slide -->
+        <div class="swiper-slide">
+        	<div class="box">
+        		<img src="img/trending1.webp" alt="">
+        		<div class="box-text">
+        			<h2> Cyberpunk 2077 </h2>
+        			<h3>Aventure - Action </h3>
+        			<div class="rating-download">
+        				<div class="rating">
+        					<i class='bx bxs-star'></i>
+        					<span>4.7</span>
+        				</div>
+        				<a href="#" class="box-btn"><i class='bx bx-down-arrow-alt' ></i></a>
+        			</div>
+        		</div>
+        	</div>
+        </div>
+        <!-- 2 Slide -->
+        <div class="swiper-slide">
+        	<div class="box">
+        		<img src="img/trending2.jpg" alt="">
+        		<div class="box-text">
+        			<h2> Battlefield 2042 </h2>
+        			<h3>FPS - Action</h3>
+        			<div class="rating-download">
+        				<div class="rating">
+        					<i class='bx bxs-star'></i>
+        					<span>4.5</span>
+        				</div>
+        				<a href="#" class="box-btn"><i class='bx bx-down-arrow-alt' ></i></a>
+        			</div>
+        		</div>
+        	</div>
+        </div>
+        <!-- 3 Slide -->
+        <div class="swiper-slide">
+        	<div class="box">
+        		<img src="img/trending3.jpg" alt="">
+        		<div class="box-text">
+        			<h2> Assassin's Creed Valhalla </h2>
+        			<h3>Aventure</h3>
+        			<div class="rating-download">
+        				<div class="rating">
+        					<i class='bx bxs-star'></i>
+        					<span>4.9</span>
+        				</div>
+        				<a href="#" class="box-btn"><i class='bx bx-down-arrow-alt' ></i></a>
+        			</div>
+        		</div>
+        	</div>
+        </div>
+        <!-- 4 Slide -->
+        <div class="swiper-slide">
+        	<div class="box">
+        		<img src="img/trending4.jpg" alt="">
+        		<div class="box-text">
+        			<h2> Ghost of Tushima </h2>
+        			<h3>Action</h3>
+        			<div class="rating-download">
+        				<div class="rating">
+        					<i class='bx bxs-star'></i>
+        					<span>3.9</span>
+        				</div>
+        				<a href="#" class="box-btn"><i class='bx bx-down-arrow-alt' ></i></a>
+        			</div>
+        		</div>
+        	</div>
+        </div>
+        <!-- 5 Slide -->
+        <div class="swiper-slide">
+        	<div class="box">
+        		<img src="img/trending5.png" alt="">
+        		<div class="box-text">
+        			<h2> GTA V </h2>
+        			<h3>Aventure - Action </h3>
+        			<div class="rating-download">
+        				<div class="rating">
+        					<i class='bx bxs-star'></i>
+        					<span>4.9</span>
+        				</div>
+        				<a href="#" class="box-btn"><i class='bx bx-down-arrow-alt' ></i></a>
+        			</div>
+        		</div>
+        	</div>
+        </div>
+        <!-- 6 Slide -->
+        <div class="swiper-slide">
+        	<div class="box">
+        		<img src="img/trending6.jpg" alt="">
+        		<div class="box-text">
+        			<h2> Dying Light </h2>
+        			<h3>Action</h3>
+        			<div class="rating-download">
+        				<div class="rating">
+        					<i class='bx bxs-star'></i>
+        					<span>3.5</span>
+        				</div>
+        				<a href="#" class="box-btn"><i class='bx bx-down-arrow-alt' ></i></a>
+        			</div>
+        		</div>
+        	</div>
+        </div>
+        <!-- 7 Slide -->
+        <div class="swiper-slide">
+        	<div class="box">
+        		<img src="img/trending7.png" alt="">
+        		<div class="box-text">
+        			<h2> Halo Infinite </h2>
+        			<h3>Action</h3>
+        			<div class="rating-download">
+        				<div class="rating">
+        					<i class='bx bxs-star'></i>
+        					<span>3.7</span>
+        				</div>
+        				<a href="#" class="box-btn"><i class='bx bx-down-arrow-alt' ></i></a>
+        			</div>
+        		</div>
+        	</div>
+        </div>
+        <!-- 8 Slide -->
+        <div class="swiper-slide">
+        	<div class="box">
+        		<img src="img/trending8.png" alt="">
+        		<div class="box-text">
+        			<h2> Resident Evil Village </h2>
+        			<h3>Action</h3>
+        			<div class="rating-download">
+        				<div class="rating">
+        					<i class='bx bxs-star'></i>
+        					<span>4.2</span>
+        				</div>
+        				<a href="#" class="box-btn"><i class='bx bx-down-arrow-alt' ></i></a>
+        			</div>
+        		</div>
+        	</div>
+        </div>
+
+
+      </div>
+		</div>
+		
+	</section>
 	<!-- Tendances end -->
 
+	<!-- Swiper Js file -->
+	<script type="text/javascript" src="js/swiper-bundle.min.js"></script>
 	<!-- Js -->
 	<script type="text/javascript" src="js/script.js"></script>
 	<script>document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')</script>
