--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
 	<title>GameStore</title>
 </head>
 <body>
+	<!-- ScrollBar personaliser -->
+	<div class="progress">
+		<div class="progress-bar" id="scroll-bar"></div>
+	</div>
+
 	<!-- En Tete -->
 	<header>
 		<!-- NavBar -->
@@ -237,7 +242,7 @@
     					<i class='bx bxs-star'></i>
     					<span>4.6</span>
     				</div>
-    				<a href="#" class="box-btn"><i class='bx bx-down-arrow-alt' ></i></a>
+    				<a href="download.html" class="box-btn"><i class='bx bx-down-arrow-alt' ></i></a>
     			</div>
     		</div>
     	</div>
@@ -348,11 +353,16 @@
     	</div>
 		</div>
 		<div class="next-page">
-			<a href="#"> Page Suivant </a>
+			<a href="#"> Suivant </a>
 		</div>
 	</section>
 	<!-- Nouveaux jeux end -->
 
+	<!-- Copyright -->
+	<div class="copyright container">
+		<a href="#" class="logo"> Game<span>Store</span> </a>
+		<p>&#169; GameStore All Right Reserved </p>
+	</div>
 
 	<!-- Swiper Js file -->
 	<script type="text/javascript" src="js/swiper-bundle.min.js"></script>
