--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 		<img src="img/home.png" alt="">
 		<div class="home-text">
 			<h1>CITY OF THE <br> FUTURE </h1>
-			<a href="#" class="btn">Disponible maintenant</a>
+			<a href="download.html" class="btn">Disponible maintenant</a>
 		</div>
 	</section>
 	<!-- Accueil end -->
@@ -92,7 +92,7 @@
         					<i class='bx bxs-star'></i>
         					<span>4.7</span>
         				</div>
-        				<a href="#" class="box-btn"><i class='bx bx-down-arrow-alt' ></i></a>
+        				<a href="download.html" class="box-btn"><i class='bx bx-down-arrow-alt' ></i></a>
         			</div>
         		</div>
         	</div>
@@ -109,7 +109,7 @@
         					<i class='bx bxs-star'></i>
         					<span>4.5</span>
         				</div>
-        				<a href="#" class="box-btn"><i class='bx bx-down-arrow-alt' ></i></a>
+        				<a href="download.html" class="box-btn"><i class='bx bx-down-arrow-alt' ></i></a>
         			</div>
         		</div>
         	</div>
@@ -126,7 +126,7 @@
         					<i class='bx bxs-star'></i>
         					<span>4.9</span>
         				</div>
-        				<a href="#" class="box-btn"><i class='bx bx-down-arrow-alt' ></i></a>
+        				<a href="download.html" class="box-btn"><i class='bx bx-down-arrow-alt' ></i></a>
         			</div>
         		</div>
         	</div>
@@ -143,7 +143,7 @@
         					<i class='bx bxs-star'></i>
         					<span>3.9</span>
         				</div>
-        				<a href="#" class="box-btn"><i class='bx bx-down-arrow-alt' ></i></a>
+        				<a href="download.html" class="box-btn"><i class='bx bx-down-arrow-alt' ></i></a>
         			</div>
         		</div>
         	</div>
@@ -160,7 +160,7 @@
         					<i class='bx bxs-star'></i>
         					<span>4.9</span>
         				</div>
-        				<a href="#" class="box-btn"><i class='bx bx-down-arrow-alt' ></i></a>
+        				<a href="download.html" class="box-btn"><i class='bx bx-down-arrow-alt' ></i></a>
         			</div>
         		</div>
         	</div>
@@ -177,7 +177,7 @@
         					<i class='bx bxs-star'></i>
         					<span>3.5</span>
         				</div>
-        				<a href="#" class="box-btn"><i class='bx bx-down-arrow-alt' ></i></a>
+        				<a href="download.html" class="box-btn"><i class='bx bx-down-arrow-alt' ></i></a>
         			</div>
         		</div>
         	</div>
@@ -194,7 +194,7 @@
         					<i class='bx bxs-star'></i>
         					<span>3.7</span>
         				</div>
-        				<a href="#" class="box-btn"><i class='bx bx-down-arrow-alt' ></i></a>
+        				<a href="download.html" class="box-btn"><i class='bx bx-down-arrow-alt' ></i></a>
         			</div>
         		</div>
         	</div>
@@ -211,7 +211,7 @@
         					<i class='bx bxs-star'></i>
         					<span>4.2</span>
         				</div>
-        				<a href="#" class="box-btn"><i class='bx bx-down-arrow-alt' ></i></a>
+        				<a href="download.html" class="box-btn"><i class='bx bx-down-arrow-alt' ></i></a>
         			</div>
         		</div>
         	</div>
@@ -257,7 +257,7 @@
     					<i class='bx bxs-star'></i>
     					<span>4.8</span>
     				</div>
-    				<a href="#" class="box-btn"><i class='bx bx-down-arrow-alt' ></i></a>
+    				<a href="download.html" class="box-btn"><i class='bx bx-down-arrow-alt' ></i></a>
     			</div>
     		</div>
     	</div>
@@ -272,7 +272,7 @@
     					<i class='bx bxs-star'></i>
     					<span>4.5</span>
     				</div>
-    				<a href="#" class="box-btn"><i class='bx bx-down-arrow-alt' ></i></a>
+    				<a href="download.html" class="box-btn"><i class='bx bx-down-arrow-alt' ></i></a>
     			</div>
     		</div>
     	</div>
@@ -287,7 +287,7 @@
     					<i class='bx bxs-star'></i>
     					<span>4.0</span>
     				</div>
-    				<a href="#" class="box-btn"><i class='bx bx-down-arrow-alt' ></i></a>
+    				<a href="download.html" class="box-btn"><i class='bx bx-down-arrow-alt' ></i></a>
     			</div>
     		</div>
     	</div>
@@ -302,7 +302,7 @@
     					<i class='bx bxs-star'></i>
     					<span>4.5</span>
     				</div>
-    				<a href="#" class="box-btn"><i class='bx bx-down-arrow-alt' ></i></a>
+    				<a href="download.html" class="box-btn"><i class='bx bx-down-arrow-alt' ></i></a>
     			</div>
     		</div>
     	</div>
@@ -317,7 +317,7 @@
     					<i class='bx bxs-star'></i>
     					<span>5.0</span>
     				</div>
-    				<a href="#" class="box-btn"><i class='bx bx-down-arrow-alt' ></i></a>
+    				<a href="download.html" class="box-btn"><i class='bx bx-down-arrow-alt' ></i></a>
     			</div>
     		</div>
     	</div>
@@ -332,7 +332,7 @@
     					<i class='bx bxs-star'></i>
     					<span>5.0</span>
     				</div>
-    				<a href="#" class="box-btn"><i class='bx bx-down-arrow-alt' ></i></a>
+    				<a href="download.html" class="box-btn"><i class='bx bx-down-arrow-alt' ></i></a>
     			</div>
     		</div>
     	</div>
@@ -347,20 +347,20 @@
     					<i class='bx bxs-star'></i>
     					<span>5.0</span>
     				</div>
-    				<a href="#" class="box-btn"><i class='bx bx-down-arrow-alt' ></i></a>
+    				<a href="download.html" class="box-btn"><i class='bx bx-down-arrow-alt' ></i></a>
     			</div>
     		</div>
     	</div>
 		</div>
 		<div class="next-page">
-			<a href="#"> Suivant </a>
+			<a href="download.html"> Suivant </a>
 		</div>
 	</section>
 	<!-- Nouveaux jeux end -->
 
 	<!-- Copyright -->
 	<div class="copyright container">
-		<a href="#" class="logo"> Game<span>Store</span> </a>
+		<a href="index.html" class="logo"> Game<span>Store</span> </a>
 		<p>&#169; GameStore All Right Reserved </p>
 	</div>
 
